objects/Account.object
<CustomObject>
    <fields>
        <fullName>AC_OCC_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Reporting on accounts that do not have ACs but should have</description>
        <label>AC OCC Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AD_Mentor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>zzzAD Mentor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AVERAGE_CUSTOMER_LENGTH__c</fullName>
        <label>zzzAverage Customer Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVERAGE_SUCCESS_RATE_OF_A_FRANCHISE__c</fullName>
        <inlineHelpText>How many new locations or dealers does corporate on average add a year</inlineHelpText>
        <label>Avg # of Locations Added a Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AccountId18__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Id (18)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Acceptance_Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if Account has proceeded forward outside of Account Acceptance Guidelines</description>
        <label>Account Acceptance Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Churn_Date__c</fullName>
        <description>Using to indicate that Exit Email should be sent.</description>
        <label>Account Churn Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please Update this Field in Yodle Live. User Roles: National Interactive Marketing Manager</inlineHelpText>
        <label>Customer Success Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_MPA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account MPA</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Last_Modified_Date__c</fullName>
        <label>Account Owner Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Account_Product_Sub_Type__c</fullName>
        <formula>IF(
AND(
NOT(CONTAINS(Product_Type__c,"SEM")),
CONTAINS(Product_Type__c,"ESSENTIALS"),
OR( 
CONTAINS(Product_Plan_Id__c,"LEADS_BY_WEB"), 
CONTAINS(Client_Experience_Key__c, "web.com-main"))), "Lead Stream - Platform Only",

IF(
AND(
CONTAINS(Product_Type__c,"SEM"),
NOT(CONTAINS(Product_Type__c,"ESSENTIALS")),
OR( 
CONTAINS(Product_Plan_Id__c,"LEADS_BY_WEB"), 
CONTAINS(Client_Experience_Key__c, "web.com-main"))), "Lead Stream - Ads Only", ""))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Product Sub Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Tier__c</fullName>
        <formula>if(
PEV__c &gt;=5000000,"Tier 1",
if(
PEV__c &gt;1000000,"Tier 2",
if(
PEV__c &gt;=500000,"Tier 3",
if(
PEV__c &gt;250000,"Tier 4",
if(
PEV__c &gt;=100000,"Tier 5",
if(
PEV__c &lt;100000,"Tier 6","NA"))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Rep__c</fullName>
        <formula>if(
 Sales_Person__r.IsActive =true,"yes","no"
)</formula>
        <label>Active Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Lead_Volume_Per_Month__c</fullName>
        <label>Actual Lead Volume Per Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_New_Customers_Per_Month__c</fullName>
        <label>Actual New Customers Per Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_PPl__c</fullName>
        <label>Actual PPl</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_ROI__c</fullName>
        <label>Actual ROI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Revenue_MTD__c</fullName>
        <label>Actual Revenue MTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AdStation_Balance__c</fullName>
        <label>AdStation Balance</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AdStation_Status__c</fullName>
        <label>AdStation Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ad_Domain_URL__c</fullName>
        <label>Ad Domain URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Adoption_Plan_Last_Uploaded_Date__c</fullName>
        <inlineHelpText>When did you last upload the Network Adoption Plan to the Notes &amp; Attachments section in salesforce?</inlineHelpText>
        <label>Adoption Plan Last Uploaded Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agency_of_Record__c</fullName>
        <label>zzzAgency of Record</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Agreement_Effective_Date__c</fullName>
        <description>Biz Dev Account Page</description>
        <label>Agreement Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Expiration_Date__c</fullName>
        <label>Agreement Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Algo_Change_Detail__c</fullName>
        <inlineHelpText>Details of the most recent algo or bulk bid change.</inlineHelpText>
        <label>Algo Change Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Algo_Version__c</fullName>
        <label>Algo Version</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>All_Products__c</fullName>
        <label>All Products</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Alternate_Email__c</fullName>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Analysis_Completed_On__c</fullName>
        <label>Analysis Completed On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Analysis_Details__c</fullName>
        <label>Analysis Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Analysis_Needed_By__c</fullName>
        <label>Analysis Needed By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Analysis_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Analysis Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Anniversary_Today__c</fullName>
        <description>Field used to denote when a client hits their yearly anniversary.</description>
        <formula>DATE(YEAR (Live_Date__c) + (FLOOR((TODAY() - Live_Date__c) / 365)  + 1),
MONTH(Live_Date__c),
IF(AND(DAY(Live_Date__c) = 29,MONTH(Live_Date__c ) = 02) , 28, DAY(Live_Date__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Field used to denote when a client hits their yearly anniversary.</inlineHelpText>
        <label>Anniversary Today</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue__c</fullName>
        <label>Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Available_Discounts_or_Promotions__c</fullName>
        <description>pulls from JCI lead portal</description>
        <label>Available Discounts or Promotions</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Average_Ad_Spend_Per_Location__c</fullName>
        <formula>((( AnnualRevenue * 0.08)/3)/ Number_of_Locations_Specific__c)/12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Ad Spend Per Location</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Additional_Sales__c</fullName>
        <label>Average Additional Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Inbound_Conversion_Rate__c</fullName>
        <label>Average Inbound Conversion Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Average_Sale_Price__c</fullName>
        <label>Average Sale Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Sale__c</fullName>
        <label>Average Sale</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Size_of_Transaction__c</fullName>
        <label>Average Size of Transaction</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Transaction_Size__c</fullName>
        <description>Revenue generated per sale/deal</description>
        <label>Average Transaction Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Avg_Annual_Revenue_per_Location__c</fullName>
        <label>Avg. Annual Revenue per Location</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Avg_of_Locations_that_Close_a_Year__c</fullName>
        <inlineHelpText>How many individual locations or dealers does corporate lose a year</inlineHelpText>
        <label>Avg # of Locations that Close a Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Berry_Account_Manager_Email__c</fullName>
        <label>Berry Account Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Berry_Contract_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>zzzBerry Contract Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Date__c</fullName>
        <label>Billing Date</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Biz_Dev_Agreement_Special_Terms__c</fullName>
        <description>Used by Biz Dev to call out any special terms in a partner agreement</description>
        <inlineHelpText>Specific or Unique terms in the agreement</inlineHelpText>
        <label>Agreement Special Terms</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Biz_Dev_Internal_Division_Owner__c</fullName>
        <description>The senior executive who owns this business unit</description>
        <inlineHelpText>Senior Executive who owns this business unit</inlineHelpText>
        <label>Internal Division Owner</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Biz_Dev_Product_Line_Manager__c</fullName>
        <description>Biz Dev Field - Name of the Product Line Manager who owns the business line associated with this product</description>
        <inlineHelpText>The Senior Leader associated with this product</inlineHelpText>
        <label>Product Line Manager</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Biz_Dev_Product_Manager__c</fullName>
        <description>The Product Manager associated with the product this partner affects</description>
        <inlineHelpText>The Product Manager associated with this product who will own the relationship once the agreement is signed.</inlineHelpText>
        <label>Product Manager</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booked_Revenue__c</fullName>
        <formula>IF( Days_since_Created__c &gt;=0,  Total_Amount__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Booked Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bottoms_Up_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bottoms Up Account?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brand_Consistency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Brand Consistency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget_Ads__c</fullName>
        <label>Budget Ads</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Change_Date__c</fullName>
        <label>Budget Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Budget_Change_Reason__c</fullName>
        <label>Budget Change Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Last_Changed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Last Changed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Budget</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bulk_Account_Proxy_IP_Used_Parent__c</fullName>
        <formula>Parent.Bulk_Account_Proxy_IP_Used__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bulk Account Proxy IP Used (Parent)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bulk_Account_Proxy_IP_Used__c</fullName>
        <label>Bulk Account Proxy IP Used</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bulk_Google_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This should be checked when there is a bulk google account that will be used for maps claiming</inlineHelpText>
        <label>Bulk Google Account (do not use)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Hours_of_Operation__c</fullName>
        <label>Business Hours of Operation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMS_2_0__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CMS 2.0</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPP_Account__c</fullName>
        <formula>If(
OR(
ISPICKVAL(Channel_Development__c, "Berry Group"), 
ISPICKVAL(Channel_Development__c, "Rogers"),
ISPICKVAL(Channel_Development__c, "ViaMedia"),
ISPICKVAL(Channel_Development__c, "")),
"No",
"Yes")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CPP Account?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Login_Credentials__c</fullName>
        <inlineHelpText>Corporate CRM login credential required to compelte CRM integration</inlineHelpText>
        <label>CRM Login Credentials</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_System_Name__c</fullName>
        <inlineHelpText>Name of the CRM system customer is using</inlineHelpText>
        <label>zzzCRM System Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_System__c</fullName>
        <label>CRM System</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CROSS_SELL_RATES_OF_PRODUCTS__c</fullName>
        <label>zzzCross Sell Rates of Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Completed_Date__c</fullName>
        <label>CSC Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSC_Date_Time__c</fullName>
        <label>CSC Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSC_Survey_E_mail_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field update connected to the same workflow rule that sends CSC Surveys</description>
        <label>CSC Survey E-mail Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Sat_Score_Past_120_Day__c</fullName>
        <inlineHelpText>Average calculated from the internal satisfaction scores that are recorded in all customer facing activities associated with the relationship</inlineHelpText>
        <label>CS Rated Sat Score - Past 120 Days</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CS_Satisfaction_Score_Past_45_Da__c</fullName>
        <inlineHelpText>Average calculated from the internal satisfaction scores that are recorded in all customer facing activities associated with the relationship</inlineHelpText>
        <label>CS Rated Sat Score - Past 45 Days</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CS_Satisfaction_Score_Past_90_Days__c</fullName>
        <inlineHelpText>Average calculated from the internal satisfaction scores that are recorded in all customer facing activities associated with the relationship</inlineHelpText>
        <label>CS Rated Sat Score - Past 90 Days</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CVR_Optimizations_Exhausted_del__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Opt for PPL Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Calculated_Expected_VPL__c</fullName>
        <formula>Average_Sale_Price__c  * (1+Average_Additional_Sales__c)* Average_Inbound_Conversion_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Expected VPL</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Campaign_Date__c</fullName>
        <label>Campaign Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charge_Failure_Status__c</fullName>
        <label>Charge Failure Status</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chargeback_Filed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select if account has had a chargeback processed against it.</inlineHelpText>
        <label>Chargeback Filed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Children_Accounts_Live__c</fullName>
        <label>Children Accounts Live</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_E_mail__c</fullName>
        <label>Client E-mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Client_Email_Preferences__c</fullName>
        <formula>"http://pages.yodle.com/aeprefcenter.html?"&amp; Email__c</formula>
        <label>Client Email Preferences</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Experience_Key__c</fullName>
        <label>Client Experience Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_First_Name__c</fullName>
        <label>Client First Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_ID_Number__c</fullName>
        <description>converting client_id to a numeric field</description>
        <formula>IF(ISNUMBER(Client_ID__c), VALUE(Client_ID__c), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client ID Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>from Yodle Live</inlineHelpText>
        <label>Client ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Client_Last_Name__c</fullName>
        <label>Client Last Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Location__c</fullName>
        <label>Client Location</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Market__c</fullName>
        <label>Client Market</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Phone_Number__c</fullName>
        <inlineHelpText>Leaving this blank will auto populate clients number</inlineHelpText>
        <label>Client Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Client_Service_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Service Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ClientServiceManager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_YL_Username__c</fullName>
        <label>Client YL Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clients_LIVE__c</fullName>
        <label>Clients LIVE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_Won_Monthly_Spend__c</fullName>
        <label>Closed Won Monthly Spend</label>
        <summarizedField>Opportunity.Corporate_Recurring_Total__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.CreatedDate</field>
            <operation>greaterOrEqual</operation>
            <value>12/31/2015 11:00 PM</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Closing__c</fullName>
        <label>Closing</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Communication_Occurs_with_Parent_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if you are not communicating with this account, and are speaking with the parent account instead.</inlineHelpText>
        <label>Communication With Parent Account Only?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitive_Advantage__c</fullName>
        <label>Competitive Advantage</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Connected_to_Facebook__c</fullName>
        <label>Connected to Facebook</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumable_Price__c</fullName>
        <label>Consumable Price</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contact_Cell__c</fullName>
        <label>Client Cell Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Frequency__c</fullName>
        <label>Contact Frequency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Client Full Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone_Number_Berry__c</fullName>
        <label>Client Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Content_Ready__c</fullName>
        <label>zzzContent Ready</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Length__c</fullName>
        <label>Contract Length</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Status__c</fullName>
        <label>Contract Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Value_Goal__c</fullName>
        <inlineHelpText>Annual goal for total contract value for all opportunities. Used as a measure in the aggregate relationship document for total forecasted opportunities value vs. contract value goal.</inlineHelpText>
        <label>Contract Value Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Converted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Converted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corp_Acct_in_YL_Parent_Account__c</fullName>
        <formula>Parent.Relationship_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Corp Acct in YL (Parent Account)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Corp_SDR_Score__c</fullName>
        <formula>IF( ISPICKVAL( Disposition__c ,"Contact Child Accounts"),3,0) + IF( ISPICKVAL(Disposition__c,"Contact Parent Account"),5,0) + IF( ISPICKVAL(Disposition__c,"Refusal"),1,0) + IF( ISPICKVAL(Disposition__c,"Not a Good Fit"),1,0) + IF( ISPICKVAL(Disposition__c,"Not Interested"),1,0) + IF( ISPICKVAL(Disposition__c,"Bottoms Up"),3,0) + IF( ISPICKVAL(Disposition__c,"Need More Info"),3,0) + IF( ISPICKVAL(Disposition__c,"Call Back"),4,0) + IF( ISPICKVAL(Disposition__c,"Opportunity"),5,0) + IF( ISPICKVAL(Disposition__c,"In Progress"),5,0) + IF( ISPICKVAL(Disposition__c,""),2,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Corp SDR Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Corporate_Billing_Date__c</fullName>
        <label>Corporate Billing Day of Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Corporate_Credit__c</fullName>
        <label>Corporate Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Corporate_Monthly_Mgmt_Fees__c</fullName>
        <label>Yodle Web Fees</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Corporate_Monthly_Organic_Fees__c</fullName>
        <inlineHelpText>Shows the monthly fees for products such as YO and video</inlineHelpText>
        <label>Organic Recurring Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Corporate_Objectives__c</fullName>
        <label>Corporate Objectives</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Corporate_Website__c</fullName>
        <label>Corporate Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creative_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Creative Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountsTSZF</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Percentage__c</fullName>
        <inlineHelpText>Promo Credits (10,15,20)</inlineHelpText>
        <label>Credit Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <label>Currency Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Active_Cancel_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Active Cancel Form</label>
        <referenceTo>Cancellation_Request__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Annual_Marketing_Spend__c</fullName>
        <inlineHelpText>Total current annual marketing spend for all advertising including online and traditional marketing</inlineHelpText>
        <label>Current Annual Marketing Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Opp_Value_MTD__c</fullName>
        <label>Current Opp Value MTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Custom_Site__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Yodle ProSite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_YBN_Protocal__c</fullName>
        <inlineHelpText>Summary of any processes or account procedures that are outside of our standard protocal, i.e. 60 day invoices, custom reporting, onpage content must be approved, call answering etc.</inlineHelpText>
        <label>Custom YBN Protocol</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Lifetime_Value__c</fullName>
        <label>Average Customer Lifetime Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Sat_Score_Past_120_Days__c</fullName>
        <inlineHelpText>Average calculated from the customer satisfaction scores that are recorded in all customer facing activities associated with the relationship</inlineHelpText>
        <label>Customer Rated Sat Score - Past 120 Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Sat_Score_Past_45_Days__c</fullName>
        <inlineHelpText>Average calculated from the customer satisfaction scores that are recorded in all customer facing activities associated with the relationship</inlineHelpText>
        <label>Customer Rated Sat Score - Past 45 Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Sat_Score_Past_90_Days__c</fullName>
        <inlineHelpText>Average calculated from the customer satisfaction scores that are recorded in all customer facing activities associated with the relationship</inlineHelpText>
        <label>Customer Rated Sat Score - Past 90 Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Success_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Success Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountsHnRp</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_s_Competitors__c</fullName>
        <label>Customer's Competitors</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_s_Sales_Funnel__c</fullName>
        <inlineHelpText>What is the customer's sales cycle &amp; key milestones with their end customer?</inlineHelpText>
        <label>Customer's Sales Funnel &amp; Milestones</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customized_Margin__c</fullName>
        <label>Customized Margin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DESCRIBE_HOW_COOP_PLAN_WORKS__c</fullName>
        <inlineHelpText>What are the philosophies, rules &amp; guidelines on how dollars can be spent</inlineHelpText>
        <label>Describe How Coop or Ad Fund Plan Works</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>